2009-10-16  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_location_dialog.c: 
	  Fix defect#12030 where the rename button was being enabled for
	  SYSTEM Locations.

2009-10-16  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_ncu.c, common/nwamui_ncu.h,
	  ui/nwam-manager-properties.ui, capplet/nwam_conn_conf_ip_panel.c: 
	  Fix defect#11975 - add ipv4/6 default route properties to NCUs, and
	  add ip4/6 default route configuration entry to IP panel.
	* ui/nwam-manager-wireless.ui, capplet/nwam_wireless_chooser.c: 
	  Move the refresh button to location suggested by Calum, and don't
	  remove existing entries in tabke unless a scan event is actually
	  returned from nwamd (if there's no change in APs, then no event will
	  be generated).
	* nwam_core/usr/include/libnwam.h:
	  Update to latest from hg, to get the changes for ipv4/6 default
	  route properties.

2009-10-15  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_vpn_pref_dialog.c: 
	  Add rename button and set sensitivity based on the can_rename()
	  flag.
	* capplet/nwam_wireless_chooser.c: 
	  Add first attempt at a wireless refresh button.
	* capplet/nwam_wireless_dialog.h, capplet/nwam_wireless_dialog.c: 
	  Change to be a singletion, and change new function to be 
	  nwam_wireless_dialog_get_instance(). 
	* capplet/nwam_conn_conf_ip_panel.c: 
	  Update to new name of nwam_wireless_dialog_get_instance()
	* common/libnwamui.h:
	  Add a set of #defines for the CAPPLET CLI options so that we can
	  reference consistently between status icon (as caller) and the CLI
	  itself.
	* capplet/main.c: 
	  Use #defined options in libnwamui.h, and clear up option strings.
	* common/libnwamui.c: 
	  Update nwamui_util_set/restore_busy_cursor to attach a signal
	  handler to the realize event if the window isn't realized.
	* daemon/status_icon.c: 
	  Make left-click launch properties dialog. Also make wifi key request
	  show the join_wireless dialog rather than notification message (as