@@ -297,6 +297,8 @@ extern gboolean                 nwamui_util_ask_yes_no(GtkWindow* parent_window,
 
 extern gboolean                 nwamui_util_confirm_removal(GtkWindow* parent_window, const gchar* title, const gchar* message);
 
+extern gboolean                 nwamui_util_ask_about_dup_obj(GtkWindow* parent_window, NwamuiObject* obj );
+
 extern void                     nwamui_util_show_message(   GtkWindow* parent_window, 
                                                             GtkMessageType type, 
                                                             const gchar* title, 
